--- a/pcf/package.json
+++ b/pcf/package.json
@@ -13,7 +13,8 @@
     "release": "npm run release:build && npm run release:check && npm run release:unpack",
     "release:build": "dotnet build -c Release Solution\\AlbanianXrmMultiOption",
     "release:check": "pac solution check --path Solution\\AlbanianXrmMultiOption\\bin\\Release\\AlbanianXrmMultiOption.zip --outputDirectory obj --geo Europe",
-    "release:unpack": "pwsh -Command \"Expand-Archive ((get-item .\\obj\\*.zip) |Select-Object -Last 1) obj -Force\""
+    "release:unpack": "pwsh -Command \"Expand-Archive ((get-item .\\obj\\*.zip) |Select-Object -Last 1) obj -Force\"",
+    "postinstall": "node ../uglyWorkaround.js"
   },
   "devDependencies": {
     "@babel/core": "^7.17.0",
@@ -47,14 +48,12 @@
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-react": "^7.32.2",
     "jest": "^28.1.3",
-    "pcf-scripts": "^1.21.8",
-    "pcf-start": "^1.21.8",
-    "prettier": "2.8.3",
-    "storybook": "^7.0.0-beta.43",
+    "pcf-scripts": "^1.19.4",
+    "pcf-start": "^1.19.4",
     "terser-webpack-plugin": "^5.3.0",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typescript": "4.2",
-    "webpack": "^5.65.0"
+    "webpack": "^5.75.0"
   },
   "dependencies": {
     "@fluentui/react": "^8.52.3",
