--- a/storybook/package.json
+++ b/storybook/package.json
@@ -8,6 +8,8 @@
     },
     "devDependencies": {
         "@shko.online/componentframework-mock": "^0.1.18",
-        "eslint-plugin-storybook": "^0.6.10"
+        "eslint-plugin-storybook": "^0.6.10",
+        "storybook": "^7.0.0-beta.43",
+        "webpack": "^5.75.0"
     }
 }
