--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -37,9 +37,9 @@ jobs:
       - name: Install Dependencies
         run: npm install
       - name: Refresh Types
-        run: npm run refreshTypes -w pcf 
+        run: npm run refreshTypes
       - name: Build Storybook
-        run: npm run build-storybook -w storybook
+        run: npm run build-storybook
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
