--- a/storybook/package.json
+++ b/storybook/package.json
@@ -9,6 +9,7 @@
     "devDependencies": {
         "@shko.online/componentframework-mock": "^0.1.18",
         "eslint-plugin-storybook": "^0.6.10",
+        "raw-loader": "^4.0.2",
         "storybook": "^7.0.0-beta.43",
         "webpack": "^5.75.0"
     }
