--- a/pcf/package.json
+++ b/pcf/package.json
@@ -13,8 +13,7 @@
     "release": "npm run release:build && npm run release:check && npm run release:unpack",
     "release:build": "dotnet build -c Release Solution\\AlbanianXrmMultiOption",
     "release:check": "pac solution check --path Solution\\AlbanianXrmMultiOption\\bin\\Release\\AlbanianXrmMultiOption.zip --outputDirectory obj --geo Europe",
-    "release:unpack": "pwsh -Command \"Expand-Archive ((get-item .\\obj\\*.zip) |Select-Object -Last 1) obj -Force\"",
-    "postinstall": "node ../uglyWorkaround.js"
+    "release:unpack": "pwsh -Command \"Expand-Archive ((get-item .\\obj\\*.zip) |Select-Object -Last 1) obj -Force\""
   },
   "devDependencies": {
     "@babel/core": "^7.17.0",
@@ -23,19 +22,9 @@
     "@babel/preset-typescript": "^7.18.6",
     "@microsoft/eslint-plugin-power-apps": "^0.2.9",
     "@prettier/plugin-xml": "^1.2.0",
-    "@storybook/addon-actions": "^7.0.0-beta.43",
-    "@storybook/addon-essentials": "^7.0.0-beta.43",
-    "@storybook/addon-interactions": "^7.0.0-beta.43",
-    "@storybook/addon-links": "^7.0.0-beta.43",
-    "@storybook/client-api": "^7.0.0-beta.43",
-    "@storybook/jest": "^0.0.11-next.0",
-    "@storybook/react": "^7.0.0-beta.43",
-    "@storybook/react-webpack5": "^7.0.0-beta.43",
-    "@storybook/test-runner": "^0.10.0-next.8",
-    "@storybook/testing-library": "^0.0.14-next.1",
     "@types/powerapps-component-framework": "^1.3.0",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "ajv": "^8.12.0",
@@ -47,7 +36,6 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-react": "^7.32.2",
-    "jest": "^28.1.3",
     "pcf-scripts": "^1.19.4",
     "pcf-start": "^1.19.4",
     "terser-webpack-plugin": "^5.3.0",
@@ -56,8 +44,8 @@
     "webpack": "^5.75.0"
   },
   "dependencies": {
-    "@fluentui/react": "^8.52.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "@fluentui/react": "^8.106.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
