--- a/storybook/package.json
+++ b/storybook/package.json
@@ -8,9 +8,19 @@
     },
     "devDependencies": {
         "@shko.online/componentframework-mock": "^0.1.18",
+        "@storybook/addon-actions": "^7.0.0-beta.60",
+        "@storybook/addon-essentials": "^7.0.0-beta.60",
+        "@storybook/addon-interactions": "^7.0.0-beta.60",
+        "@storybook/addon-links": "^7.0.0-beta.60",
+        "@storybook/client-api": "^7.0.0-beta.60",
+        "@storybook/jest": "^0.0.11-next.0",
+        "@storybook/react": "^7.0.0-beta.60",
+        "@storybook/react-webpack5": "^7.0.0-beta.60",
+        "@storybook/test-runner": "^0.10.0-next.8",
+        "@storybook/testing-library": "^0.0.14-next.1",
         "eslint-plugin-storybook": "^0.6.10",
         "raw-loader": "^4.0.2",
-        "storybook": "^7.0.0-beta.43",
+        "storybook": "^7.0.0-beta.60",
         "webpack": "^5.75.0"
     }
 }
