--- a/storybook/package.json
+++ b/storybook/package.json
@@ -1,27 +1,29 @@
 {
-    "name": "@albanian-xrm/multi-switch-stories",
-    "private": true,
-    "scripts": {
-        "storybook": "storybook dev -p 6006",
-        "test-storybook": "test-storybook",
-        "build-storybook": "storybook build"
-    },
-    "devDependencies": {
-        "@shko.online/componentframework-mock": "^0.1.23",
-        "@storybook/addon-actions": "^7.0.5",
-        "@storybook/addon-essentials": "^7.0.5",
-        "@storybook/addon-interactions": "^7.0.5",
-        "@storybook/addon-links": "^7.0.5",
-        "@storybook/client-api": "^7.0.5",
-        "@storybook/jest": "^0.0.11-next.0",
-        "@storybook/react": "^7.0.5",
-        "@storybook/react-webpack5": "^7.0.5",
-        "@storybook/test-runner": "^0.10.0",
-        "@storybook/testing-library": "^0.0.14-next.1",
-        "chromatic": "^6.17.3",
-        "eslint-plugin-storybook": "^0.6.11",
-        "raw-loader": "^4.0.2",
-        "storybook": "^7.0.5",
-        "webpack": "^5.79.0"
-    }
+  "name": "@albanian-xrm/multi-switch-stories",
+  "private": true,
+  "scripts": {
+    "storybook": "storybook dev -p 6006",
+    "test-storybook": "test-storybook",
+    "build-storybook": "storybook build"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.21.5",
+    "@shko.online/componentframework-mock": "^0.1.23",
+    "@storybook/addon-actions": "^7.0.14",
+    "@storybook/addon-essentials": "^7.0.14",
+    "@storybook/addon-interactions": "^7.0.14",
+    "@storybook/addon-links": "^7.0.14",
+    "@storybook/blocks": "^7.0.14",
+    "@storybook/client-api": "^7.0.14",
+    "@storybook/html": "^7.0.14",
+    "@storybook/html-webpack5": "^7.0.14",
+    "@storybook/jest": "^0.1.0",
+    "@storybook/test-runner": "^0.10.0",
+    "@storybook/testing-library": "^0.1.0",
+    "chromatic": "^6.17.3",
+    "eslint-plugin-storybook": "^0.6.12",
+    "raw-loader": "^4.0.2",
+    "storybook": "^7.0.14",
+    "webpack": "^5.79.0"
+  }
 }
