--- a/storybook/package.json
+++ b/storybook/package.json
@@ -9,21 +9,23 @@
   "devDependencies": {
     "@babel/preset-env": "^7.21.5",
     "@shko.online/componentframework-mock": "^0.1.23",
-    "@storybook/addon-actions": "^7.1.0",
-    "@storybook/addon-essentials": "^7.1.0",
-    "@storybook/addon-interactions": "^7.1.0",
-    "@storybook/addon-links": "^7.1.0",
-    "@storybook/blocks": "^7.1.0",
-    "@storybook/client-api": "^7.1.0",
-    "@storybook/html": "^7.1.0",
-    "@storybook/html-webpack5": "^7.1.0",
-    "@storybook/jest": "^0.1.0",
-    "@storybook/test-runner": "^0.11.0",
-    "@storybook/testing-library": "^0.2.0",
+    "@storybook/addon-actions": "^7.4.5",
+    "@storybook/addon-essentials": "^7.4.5",
+    "@storybook/addon-interactions": "^7.4.5",
+    "@storybook/addon-links": "^7.4.5",
+    "@storybook/blocks": "^7.4.5",
+    "@storybook/client-api": "^7.4.5",
+    "@storybook/html": "^7.4.5",
+    "@storybook/html-webpack5": "^7.4.5",
+    "@storybook/jest": "^0.2.2",
+    "@storybook/test-runner": "^0.13.0",
+    "@storybook/testing-library": "^0.2.1",
     "chromatic": "^6.17.3",
-    "eslint-plugin-storybook": "^0.6.13",
+    "eslint-plugin-storybook": "^0.6.14",
     "raw-loader": "^4.0.2",
-    "storybook": "^7.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "storybook": "^7.4.5",
     "webpack": "^5.79.0"
   }
 }
