--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "storybook"
     ],
     "devDependencies": {
+        "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
         "prettier": "^2.8.4",
         "replace-in-file": "^6.3.5"
     },
