refactor and update dependencies

--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -30,11 +30,10 @@ jobs:
       - name: Install Dependencies
         run: npm install
       - name: Refresh Types
-        run: npm run refreshTypes -w pcf 
+        run: npm run refreshTypes
       - name: Publish to Chromatic
         uses: chromaui/action@v1
         # Chromatic GitHub Action options
         with:
           # 👇 Chromatic projectToken, refer to the manage page to obtain it.
           projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
-          workingDir: 'storybook'
