--- a/package.json
+++ b/package.json
@@ -1,19 +1,64 @@
 {
-    "name": "@albanian-xrm/multi-switch-workspace",
-    "private": true,
-    "workspaces": [
-        "pcf",
-        "storybook"
-    ],
-    "devDependencies": {
-        "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
-        "prettier": "^2.8.4",
-        "replace-in-file": "^6.3.5"
-    },
-    "scripts": {
-        "refreshTypes": "npm run refreshTypes -w pcf",
-        "storybook": "npm run storybook -w storybook",
-        "build-storybook": "npm run build-storybook -w storybook",
-        "postinstall": "node uglyWorkaround.js"
-    }
+  "name": "@albanian-xrm/multi-switch",
+  "version": "1.0.11",
+  "description": "Project containing your PowerApps Component Framework (PCF) control.",
+  "scripts": {
+    "build": "pcf-scripts build",
+    "clean": "pcf-scripts clean",
+    "lint": "pcf-scripts lint",
+    "lint:fix": "pcf-scripts lint fix",
+    "rebuild": "pcf-scripts rebuild",
+    "start": "pcf-scripts start",
+    "refreshTypes": "pcf-scripts refreshTypes",
+    "release": "npm run release:build && npm run release:check && npm run release:unpack",
+    "release:build": "dotnet build -c Release Solution\\AlbanianXrmMultiOption",
+    "release:check": "pac solution check --path Solution\\AlbanianXrmMultiOption\\bin\\Release\\AlbanianXrmMultiOption.zip --outputDirectory obj --geo Europe",
+    "release:unpack": "pwsh -Command \"Expand-Archive ((get-item .\\obj\\*.zip) |Select-Object -Last 1) obj -Force\"",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.17.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@microsoft/eslint-plugin-power-apps": "^0.2.9",
+    "@prettier/plugin-xml": "^1.2.0",
+    "@shko.online/componentframework-mock": "^0.5.0",
+    "@storybook/addon-essentials": "^7.6.10",
+    "@storybook/addon-interactions": "^7.6.10",
+    "@storybook/addon-links": "^7.6.10",
+    "@storybook/addons": "^7.6.10",
+    "@storybook/blocks": "^7.6.10",
+    "@storybook/html": "^7.6.10",
+    "@storybook/html-webpack5": "^7.6.10",
+    "@storybook/test": "^7.6.10",
+    "@storybook/testing-library": "^0.2.2",
+    "@types/powerapps-component-framework": "^1.3.0",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "babel-loader": "^8.2.3",
+    "esbuild-loader": "^3.0.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-sonarjs": "^0.23.0",
+    "eslint-plugin-storybook": "^0.6.15",
+    "pcf-scripts": "^1.19.4",
+    "pcf-start": "^1.19.4",
+    "raw-loader": "^4.0.2",
+    "storybook": "^7.6.10",
+    "terser-webpack-plugin": "^5.3.0",
+    "tsconfig-paths-webpack-plugin": "^3.5.2",
+    "typescript": "^4.9.5",
+    "webpack": "^5.75.0"
+  },
+  "dependencies": {
+    "@fluentui/react": "^8.106.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  }
 }
